# bash_tokenizer

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  test.yml
src/: lib.rs
src/lexer/: dollar_single_quotes.rs  double_quote_string.rs  double_quotes.rs  metacharacter.rs  mod.rs  number.rs  single_quote_string.rs  single_quotes.rs  whitespace.rs
src/tokens/: tokens.rs
